# uchroot

./: .pep8  .pylintrc  CMakeLists.txt  README.md  README.rst  TODO.md  pylintrc  setup.py  uchroot.json  uchroot.py
demo/: base_files.patch  multistrap.patch  sources-arm64.list  trusty_arm64.conf  trusty_arm64.json
uchroot/: CMakeLists.txt  __init__.py  __main__.py  dump_constants.py
uchroot/demo/: trusty_arm64.py
uchroot/doc/: CMakeLists.txt  README.rst  changelog.rst  conf.py  index.rst  modules.rst  multistrap_example.rst  todo.rst
uchroot/pypi/: setup.py
